--- a/estructura de archivos/old/views/index.html
+++ b/estructura de archivos/old/views/index.html
@@ -22,7 +22,10 @@
                     <span class="navbar-toggler-icon"></span></button>
                     <a class="header--figure-logo" href="/index"><img src="/images/logo2.png" alt=""></a>
                     <div class="header__top--general-navigation_button">
-                        <button><a href="#"><i class="fa-solid fa-magnifying-glass"></i></a></button>
+                        <div class="header__top--search">
+                            <input type="text" placeholder="Buscar" requiered>
+                            <div class="header__top--search-button"><i class="fa-solid fa-magnifying-glass icon"></i></div>
+                        </div>
                         <button><a href="/cart"><i class="fa-solid fa-cart-shopping"></i></a></button>
                         <li class="nav-item dropdown header__top--login">
                             <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false"><i class="fa-solid fa-user"></i></a>
