--- a/estructura de archivos/old/views/index.html
+++ b/estructura de archivos/old/views/index.html
@@ -16,7 +16,7 @@
 <body id="index">
     <header id="top">
         <div class="header__top--general">
-            <nav class="navbar navbar-dark bg-dark fixed-top">
+            <nav class="navbar navbar-dark bg-dark fixed-top header__top--general-navbar">
                 <div class="container-fluid">
                     <button class="navbar-toggler" type="button" data-bs-toggle="offcanvas" data-bs-target="#offcanvasDarkNavbar" aria-controls="offcanvasDarkNavbar">
                     <span class="navbar-toggler-icon"></span></button>
@@ -66,6 +66,31 @@
                             </ul>
                         </div>
                     </div>
+                </div>
+                <div class="header_div">
+                    <ul class="navbar-nav justify-content-end flex-grow-1 pe-3 header_div--navbar-desktop">
+                        <li class="nav-item">
+                            <a class="nav-link active" aria-current="page" href="#">TIENDA</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link active" aria-current="page" href="#">JUEGOS</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link active" aria-current="page" href="#">TARJETAS DE REGALO</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link active" aria-current="page" href="#">XBOX</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link active" aria-current="page" href="#">SOWFTWARE</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link active" aria-current="page" href="#">LISTA DE DESEOS</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link active" aria-current="page" href="#">Espñaol Latinoamerica | ARS</a>
+                        </li>
+                    </ul>
                 </div>
             </nav>
         </div>
