--- a/estructura de archivos/src/views/productsLoad.ejs
+++ b/estructura de archivos/src/views/productsLoad.ejs
@@ -10,29 +10,29 @@
             </div>
             
             <form action="">
-                <div class="fullName2">
+                <div class="form-box">
                     <label class="form__label" for="nombre">Nombre</label>
                     <input class="form__input" type="text" id="nombre" autocomplete="off" name="firstName" placeholder="Ingrese el nombre del articulo">
                     <!-- <small class="form__text--error">El nombre es obligatorio</small> -->
                 </div>
-                <div class="fullName2">
+                <div class="form-box">
                     <label class="form__label" >Seleccione una categoria</label>
                     <select name="categoria" id="">
-                        <option value="">categoria 1</option>
-                        <option value="">categoria 2</option>
-                        <option value="">categoria 3</option>
+                        <option value="">Categoria 1</option>
+                        <option value="">Categoria 2</option>
+                        <option value="">Categoria 3</option>
                     </select>
 
                 </div>
                 
-                <div class="fullName2">
+                <div class="form-box">
                     <label class="form__label" for="precio">Precio</label>
                     <input class="form__input" type="number" id="" name="precio" placeholder="Ingrese un precio">
                     <!-- <small class="form__text--error">Solo se aceptan numeros en este campo</small> -->
 
                 </div>
                 
-                <div class="fullName2">
+                <div class="form-box">
                     <label class="form__label" >Descuento</label>
                     <select name="descuento" id="">
                         <option value="">5%</option>
@@ -43,19 +43,19 @@
                     </select>
 
                 </div>
-                <div class="fullName2">
+                <div class="form-box">
                     <label class="form__label" for="descripcion">Descripcion</label>
                     <textarea name="descripcion" id="" cols="30" rows="5" placeholder="Ingrese una descripcion"></textarea>
 
                 </div>
-                <div class="fullName2">
+                <div class="form-box">
 
                 </div>
-                <div class="fullName2 load-image">
-                    <label for="imagen"></label>
+                <div class="form-box load-image">
+                    <label class="form__label" for="imagen">Añadir imagenes</label>
                     <input type="file" name="imagen" accept=".jpg" multiple>
                 </div>
-                <div class="fullName2 buttons">
+                <div class="form-box buttons">
                     <button class="" type="reset">Cancelar</button>
                     <button  class="total-comprar " type="submit">Agregar</button>
                 </div>
