--- a/estructura de archivos/public/css/styles.css
+++ b/estructura de archivos/public/css/styles.css
@@ -11,4 +11,4 @@
 @import'/css/favourites.css';
 @import'/css/userProfile.css';
 @import'/css/shopping.css';
-@import'/css/products.css';
+@import'/css/productsLoad.css';
