--- a/estructura de archivos/public/css/productsLoad.css
+++ b/estructura de archivos/public/css/productsLoad.css
@@ -1,21 +1,35 @@
-#products__main{
+.products {
+    background-image: url(../images/DALF\ BACKGROUND5blur.png);
+    background-size: cover;
+    background-repeat: no-repeat;
+    background-position: center;
+    background-attachment: fixed;
+}
+
+#products__main {
     padding-top: 70px;
 }
-.products-titulo{
+
+.products-titulo {
     text-align: center;
-    padding: 20px;
+    padding: 10px;
+    margin: 0;
+    border-bottom: 1px solid var(--C_Lightblue_Logo);
+    border-radius: 10px 10px 0 0;
+    width: 100%;
 }
-.products{
+
+.products {
     display: flex;
     flex-wrap: wrap;
     justify-content: center;
-    
 }
-.products-caja{
+
+.products-caja {
     flex-direction: column;
-    width:100vw;
-    
+    width: 100vw;
 }
+
 .form-box {
     margin: auto;
     width: 80%;
@@ -24,12 +38,19 @@
     padding-bottom: 15px;
 }
 
+.products-caja form input:hover {
+    transition: 0.5s;
+    border: 1px solid var(--C_Lightblue_Logo);
+    color: var(--C_Lightblue_Logo);
+}
+
 .form-box label {
     color: var(--C_Ice-Cream);
     font-size: 1rem;
     margin: auto;
     margin-left: 0px;
     margin-bottom: 8px;
+    border-bottom: 1px solid var(--C_Lightblue_Logo);
 }
 
 .form-box input {
@@ -38,15 +59,17 @@
     width: 100%;
     height: 40px;
     border: 1px solid var(--C_Ice-Cream);
-    color:var(--C_Ice-Cream);
+    color: var(--C_Ice-Cream);
     border-radius: 5px;
     background: rgba(255, 255, 255, 0.1940);
     border-top-right-radius: 15px;
     border-bottom-left-radius: 15px;
     font-size: 0.9rem;
     padding-left: 10px;
+    outline: none;
 }
-.products-caja select{
+
+.products-caja select {
     display: block;
     margin: auto;
     width: 100%;
@@ -54,72 +77,100 @@
     border: 1px solid var(--C_Ice-Cream);
     border-radius: 5px;
     background: rgba(255, 255, 255, 0.1940);
-    color:var(--C_Ice-Cream);
+    color: var(--C_Ice-Cream);
     border-top-right-radius: 15px;
     border-bottom-left-radius: 15px;
     font-size: 0.9rem;
     padding-left: 10px;
+    outline: none;
 }
-.products-caja select option{
-    background: rgba(255, 255, 255, 0.1940);
+
+.products-caja select:hover {
+    transition: 0.5s;
+    border: 1px solid var(--C_Lightblue_Logo);
+    color: var(--C_Lightblue_Logo);
 }
-.products-caja textarea{
+
+.products-caja select option {
+    background: var(--C_Grey_Dark);
+}
+
+.products-caja textarea {
     display: block;
     margin: auto;
     width: 100%;
     border: 1px solid var(--C_Ice-Cream);
     border-radius: 5px;
     background: rgba(255, 255, 255, 0.1940);
-    color:var(--C_Ice-Cream);
+    color: var(--C_Ice-Cream);
     border-top-right-radius: 15px;
     border-bottom-left-radius: 15px;
     font-size: 0.9rem;
     outline: none;
     padding-left: 10px;
+    outline: none;
 }
-.load-image input{
+
+.products-caja textarea:hover {
+    transition: 0.5s;
+    border: 1px solid var(--C_Lightblue_Logo);
+    color: var(--C_Lightblue_Logo);
+}
+
+.load-image input {
     height: 70px;
 }
-.buttons{
+
+.buttons {
     display: flex;
     justify-content: space-around;
 }
-.buttons button{
+
+.buttons button {
     width: 45%;
     height: 40px;
-    background-color:#0d6efd ;
+    background-color: var(--C_Grey_Dark);
     color: var(--C_Ice-Cream);
-    border-radius:5px;
-    border:none;
+    border-radius: 5px;
+    border: none;
 }
+
+.buttons button:hover {
+    transition: 0.5s;
+    border: 1px solid var(--C_Pink_Logo);
+    color: var(--C_Pink_Logo);
+}
+
 @media (min-width: 425px) {
-    .products-caja{
-        width:420px;
+    .products-caja {
+        width: 420px;
     }
 }
+
 @media (min-width: 1024px) {
-    #products__main{
+    #products__main {
         padding-top: 10%;
     }
-    .products-caja{
+    .products-caja {
         flex-direction: row;
-        width:80vw;
-        border: solid 1px #212529;
+        width: 80vw;
+        border: solid 1px var(--C_Lightblue_Logo);
         box-shadow: #2a2929 5px 5px 5px;
+        border-radius: 5px;
     }
-    .products-caja form{
+    .products-caja form {
         display: flex;
         flex-wrap: wrap;
         flex-direction: row;
-        justify-content: center;
+        justify-content: space-evenly;
+        padding-top: 10px;
     }
     .form-box {
         margin: 0;
         width: 45%;
         padding: 0 10px 15px 0;
     }
-    .load-image{
+    .load-image {
         width: 70%;
     }
-    
 }
