--- a/estructura de archivos/src/views/productsLoad.ejs
+++ b/estructura de archivos/src/views/productsLoad.ejs
@@ -18,9 +18,17 @@
                 <div class="form-box">
                     <label class="form__label" >Seleccione una categoria</label>
                     <select name="categoria" id="">
-                        <option value="">Categoria 1</option>
-                        <option value="">Categoria 2</option>
-                        <option value="">Categoria 3</option>
+                        <option value="accion">Categoria</option>
+                        <option value="accion">accion</option>
+                        <option value="aventura">aventura</option>
+                        <option value="ftp/tps">FTP/TPS</option>
+                        <option value="rpg">RPG</option>
+                        <option value="simulacion">simulacion</option>
+                        <option value="carreras">carreras</option>
+                        <option value="lucha">lucha</option>
+                        <option value="mmo">MMO</option>
+                        <option value="arcade">arcade</option>
+                        <option value="otro">otro</option>
                     </select>
 
                 </div>
@@ -35,11 +43,12 @@
                 <div class="form-box">
                     <label class="form__label" >Descuento</label>
                     <select name="descuento" id="">
-                        <option value="">5%</option>
-                        <option value="">10%</option>
-                        <option value="">15%</option>
-                        <option value="">20%</option>
-                        <option value="">30%</option>
+                        <option value="">Descuento</option>
+                        <option value="5">5%</option>
+                        <option value="10">10%</option>
+                        <option value="15">15%</option>
+                        <option value="20">20%</option>
+                        <option value="30">30%</option>
                     </select>
 
                 </div>
